--- a/src/bma.package/css/LTLStates.less
+++ b/src/bma.package/css/LTLStates.less
@@ -388,7 +388,7 @@
 
                     .state-variable-image {
                         display:inline-block;
-                        background: url("../images/state-variable.svg") no-repeat;
+                        background: url("../images/variable.svg") no-repeat;
                         background-size: 20px 20px;
                         width: 20px;
                         height: 20px;
@@ -656,8 +656,8 @@
 	width:120px;
     .default-text;
 	img{
-		max-width: 20px;
-        max-height:20px;
+		width: 20px;
+        height:20px;
 	}
 	table{
         margin: 5px;
