--- a/src/bma.package/css/LTL_less.less
+++ b/src/bma.package/css/LTL_less.less
@@ -92,7 +92,7 @@
 				.default-cell();
 
                 &.variable {
-                    .default-text();
+                    //.default-text();
                     width:230px;
                     padding: 0px 5px;
                     text-align: left;
@@ -102,6 +102,10 @@
 
                     img {
                         height: 20px;
+                    }
+
+                    p {
+                        .default-text();
                     }
                 }
 
